<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Troper</string>
    <string name="main_menu">Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="favorites">Favorites</string>
    <string name="readlater">Read-Later</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="recent">Recently Read</string>
    <string name="drawerOpen">Open Drawer</string>
    <string name="drawerClose">Close Drawer</string>
    <string name="tabClose">Close Tab</string>
    <string name="openTabs">Open Tabs</string>
    <string name="Loading">Loading</string>
    <string name="Parsing">Parsing</string>
    <string name="Connecting">Connecting</string>

    <!-- Settings page -->
    <string name="displaySettings">Display Settings</string>
    <string name="tabSettings">Tab Settings</string>
    <string name="newTab">Open All Links in New Tab</string>
    <string name="moveToTab">Move To New Tab</string>
    <string name="moveToTabDesc">Automatically move to newly opened tabs</string>
    <string name="lockRotation">Lock Rotation</string>
    <string name="unlockRotation">Unlock Rotation</string>
    <string name="nightMode">Night Mode</string>
    <string name="toggleNightMode">Toggle Night Mode</string>
    <string name="nightModeDesc">Display articles with a dark background for easier reading in the dark</string>
    <string name="lockRotationSum">Enable to prevent your screen from rotating.\nDisable to use device\'s global settings.</string>
    <string name="preventScreenOff">Prevent Sleep</string>
    <string name="preventScreenOffSum">Enable to prevent your screen from shutting down while reading an article.</string>
    <string name="allowZoom">Allow Zoom</string>
    <string name="allowZoomDesc">Allow to zoom in and out using gestures</string>
    <string name="zoomToolbar">Enable Zoom Toolbar</string>
    <string name="zoomToolbarDesc">Enable a floating toolbar with zoom buttons!</string>
    <string name="showSpoilers">Show Spoilers</string>
    <string name="showSpoilersDesc">When enabled, spoilers will not be hidden</string>
    <string name="showWarning">Warn me</string>
    <string name="showWarningDesc">Warns you if spoilers are not hidden</string>
    <string name="saveSettingsError">Failed to save settings!</string>
    <string name="saveSettingsOK">Saved to settings!</string>
    <string name="spoilerWarning">WARNING: Spoilers are not currently hidden!</string>
    <string name="recentList">Recently Read</string>
    <string name="noRecent">No pages in history.</string>
    <string name="Spoilers">Spoilers</string>
    <string name="highlightSpoilers">Highlight revealed spoilers</string>
    <string name="highlightSpoilersDesc">Even when spoilers are shown, they will still be highlighted</string>
    <string name="recentShow">No. of items to save</string>
    <string name="clearHistory">Clear History</string>
    <string name="currentInList">Currently in list: </string>
    <string name="advancedSettings">Advanced Settings</string>
    <string name="connectionTimeout">Connection Timeout (in seconds)</string>
    <string name="clearRecentSuccess">List cleared!</string>
    <string name="confirmTitle">Are you sure?</string>
    <string name="confirmClearSuggestions">Are you sure you want to clear search suggestions?</string>
    <string name="confirmClearRecent">Are you sure you want to clear the recently read articles list?</string>
    <string name="clearSuggestionSuccess">Suggestions cleared!</string>
    <string name="sortMethod">Default Sort Method</string>
    <string name="favoriteCount">Currently in Favorites: </string>
    <string name="rlCount">Currently in \'Read-Later\' list: </string>
    <string name="clearFavorites">Clear Favorites</string>
    <string name="clearReadLater">Clear \'Read-Later\' list</string>
    <string name="confirmClearFavorites">Are you sure you want to clear all your favorites?</string>
    <string name="confirmClearReadLater">Are you sure you want to clear your \'Read-Later\' list?</string>
    <string name="clearFavoritesSuccess">Favorites cleared!</string>
    <string name="clearReadLaterSuccess">\'Read-Later\' list cleared!</string>
    <string name="tabletView">Tablet View</string>
    <string name="tabletViewDesc">Render pages with tablets in mind.\n Turn off if you get weird looking pictures and pages.</string>
    <string name="kitkatReflow">Enable text reflow in KitKat</string>
    <string name="kitkatReflowPadding">Pad text while reflowing</string>
    <string name="kitkatReflowPaddingWarning">Warning: may cause issues with rotation!\n Disable if you\'re experiencing problems!</string>
    <string name="neverAskTitle">Confirm before exiting</string>
    <string name="saveTabs">Save open tabs (if any) before exiting</string>

    <!-- Menu Elements -->
    <string name="menu_open_new">Open in new tab</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="open">Open</string>
    <string name="openExternal">Open in External Browser</string>
    <string name="externalLink">External Link</string>
    <string name="Search">Search</string>
    <string name="add_to_rl">Read Later</string>


    <!-- Interface Elements -->
    <string name="exitConfirm">Evacuate? At our moment of triumph?</string>
    <string name="exitConfirmText">Are you sure you want to quit Troper?</string>
    <string name="exitYes">I need a break!</string>
    <string name="exitNo">On second thought...</string>
    <string name="exit">Exit</string>
    <string name="Retry">Retry</string>
    <string name="Abort">Abort</string>
    <string name="Sort">Sort</string>
    <string name="sortByName">Sort by Name</string>
    <string name="oldestFirst">Oldest First</string>
    <string name="newestFirst">Newest First</string>
    <string name="addedToFav">added to Favorites.</string>
    <string name="addedToReadLater">added to \'Read-Later\' list.</string>
    <string name="alreadyInFavorites">already in Favorites.</string>
    <string name="alreadyInReadLater">already in \'Read-Later\' list.</string>
    <string name="favoritesEmpty">Your Favorites are empty!</string>
    <string name="readLaterEmpty">Your \'Read-Later\' list is empty!</string>
    <string name="recentEmpty">There are no items in your history!</string>
    <string name="listEmpty">The list is empty!</string>
    <string name="findInPage">Find in Page</string>
    <string name="share">Share...</string>
    <string name="unexpectedError">An unexpected error has occurred!</string>
    <string name="error">Error!</string>
    <string name="connectionError">Connection Error!</string>
    <string name="articleError">An error occurred trying to load the article!</string>
    <string name="timeout_error_message">TVTropes may be down or you may not have an active internet connection.\n\nTry increasing the timeout in the application settings, or see if the site loads from an external browser.</string>
    <string name="openInBrowser">Open in Browser</string>
    <string name="retry">Retry</string>
    <string name="restoreTitle">Restore Last Session</string>
    <string name="restoreMessage">Troper has an active tab session saved.\n Would you like to restore it?\n</string>
    <string name="saveMessage">Save tab session and restore on next launch</string>
    <string name="incomingExternal">Incoming Article</string>
    <string name="incomingError">There was a problem with the incoming article\'s URL.</string>
    <string name="saveLog">Save error log</string>
    <string name="neverAsk">Never ask me again!</string>

    <!--Search Strings-->
    <string name="Searching">Searching</string>
    <string name="searchCancelled">Search cancelled by user!</string>
    <string name="noResults">Your search query returned no results</string>
    <string name="searchSettings">Search Settings</string>
    <string name="clearSuggestions">Clear search suggestions</string>
    <string name="backupSettings">Backup Settings to Storage</string>
    <string name="restoreSettings">Restore Settings from Backup</string>
    <string name="backupSuccess">Settings backed up successfully to: </string>
    <string name="settingsRestoredSuccess">Settings restored successfully. Please restart the app to apply them!</string>
    <string name="failedWriteSD">Failed to write to storage! Make sure it is available and not locked or full.</string>
    <string name="backupError">An error occurred trying to backup application settings!</string>
    <string name="backupDoesNotExist">Backup not found!</string>
    <string name="failedWriteSettings">Failed to write to settings!</string>
    <string name="settingsRestoreFailed">An error occurred trying to restore application settings!</string>
    <string name="backupSummary">Settings will be saved to: </string>

    <!-- About -->
    <string name="byline">by Elad Avron</string>
    <string name="Version">Version</string>
    <string name="build">build</string>
    <string name="WebsiteClick">For News, Updates, Bug Reports or just to say \"Hi\", visit our new website by clicking here!</string>
    <string name="GitHubClick">Or click here to visit our GitHub repository to take a peek at the source code</string>
    <string name="cc">This work is licensed under a <a href='http://creativecommons.org/licenses/by-nc-sa/3.0/'>Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</string>
    <string name="clickForDetails">Click for details...</string>
    <string name="usesLibraries"><u>This application uses the following libraries:</u></string>
    <string name="jsoup">• <a href='http://jsoup.org/'>jsoup-1.9.2</a></string>
    <string name="assets">Assets in this app were created using the <a href='http://android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html'>Android Asset Studio</a>. It is highly recommended!</string>
    <string name="changelog"><u>Changelog:</u></string>
    <string name="github">Source code available at <a href='https://github.com/eladavron/AndroidTroper2'>GitHub</a>!</string>

    <!-- Share -->
    <string name="shareSubject">Check out this article on TvTropes!</string>
    <string name="shareText">Check out this article on TvTropes:</string>
    <string name="shareSignature">Sent using <a href='https://play.google.com/store/apps/details?id=ambious.androidtroperAndroidTroper'>Troper - The Android TVTropes Reader!</a></string>
    <string name="shareTitle">Share Article</string>
    <string name="defaultZoom">Default Zoom</string>

    <!-- Update -->
    <string name="updateTitle">\"Troper\" Updated!</string>
    <string name="updateSummary">Troper has been updated!\n\n
Version 2.8.1:\n
        • 2.8.0 had some performance issues on high-resolution devices, hopefully this update will fix that.\n
        • \"Android Troper\" is now just \"Troper\" due to Google\'s new guidelines.\n
        • Refreshed the app\'s themes.\n
        • Updated a lot of behind-the-scenes stuff.\n
        • Replaced all references to the Google+ page with links to the new website.\n
        • Seriously, forget that old page. If you want to reach me, use the new page!\n
        A more detailed update log can be found in the \"About\" screen or on our GitHub.\n\n
        Don\'t worry, this message only appears once per update!</string>
</resources>
