<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_search"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_shuffle"
          android:orderInCategory="10"
          android:showAsAction="ifRoom"
          android:title="@string/random"
          android:icon="@drawable/ic_action_random"
          android:visible="false"
          />


    <item android:id="@+id/action_find"
          android:orderInCategory="15"
          android:showAsAction="ifRoom"
          android:title="@string/findInPage"
          android:icon="@drawable/ic_menu_find_holo_dark"
          android:visible="false"/>

    <item android:id="@+id/action_share"
          android:showAsAction="never"
          android:title="@string/share"
          android:orderInCategory="17"
          android:actionProviderClass="android.widget.ShareActionProvider"
          android:visible="false"/>

    <item android:id="@+id/action_favorite"
          android:orderInCategory="20"
          android:showAsAction="never"
          android:title="@string/add_to_fav"
          android:visible="false"
          />

    <item android:id="@+id/action_lockRotation"
          android:showAsAction="never"
          android:checkable="true"
          android:title="@string/lockRotation"
          android:orderInCategory="50"/>
    <item android:id="@+id/action_nightMode"
          android:orderInCategory="60"
          android:showAsAction="never"
          android:checkable="true"
          android:title="@string/nightMode"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>
