<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/clearAll"
        android:id="@+id/action_clear_all"
        android:icon="@drawable/ic_trash"
        app:showAsAction="always"/>
    <item
        android:title="@string/Sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always|withText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_name"
                    android:title="@string/sortByName"
                    android:orderInCategory="0"/>
                <item
                    android:id="@+id/sort_oldest"
                    android:title="@string/oldestFirst"
                    android:orderInCategory="5"/>
                <item
                    android:id="@+id/sort_newest"
                    android:title="@string/newestFirst"
                    android:orderInCategory="10"/>
            </group>
        </menu>
    </item>
</menu>