<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/about_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:padding="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/versionString"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/byLine"
                android:text="@string/byline"
                android:layout_gravity="center"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ccButton"
                android:layout_gravity="center"
                android:src="@drawable/cc"/>

            <TextView
                android:id="@+id/ccText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cc"/>

            <TextView
                android:id="@+id/GitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/github"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assets"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:id="@+id/assets"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usesLibraries"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/jsoup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsoup"
                android:linksClickable="true"
                android:clickable="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changelog"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/changeLog"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>