<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- App bar -->
    <include android:id="@+id/app_bar" layout="@layout/action_bar"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />

                <!-- Links -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom">

                    <!-- Website link -->
                    <LinearLayout
                        android:id="@+id/WebsiteClickable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal|bottom"
                        android:clickable="true">

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#bfbfbf"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"/>

                        <TextView
                            android:id="@+id/WebsiteText"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:text="@string/WebsiteClick"
                            android:singleLine="false"
                            android:longClickable="false"
                            android:drawablePadding="10dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"/>
                    </LinearLayout>

                    <!-- Github link -->
                    <LinearLayout
                        android:id="@+id/GithubClickable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal|bottom"
                        android:clickable="true">
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#bfbfbf"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"/>
                        <TextView
                            android:id="@+id/GithubText"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:text="@string/GitHubClick"
                            android:singleLine="false"
                            android:longClickable="false"
                            android:drawablePadding="10dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <view
            class="ambious.androidtroper.MainActivity$MyViewPager"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <include layout="@layout/nav_drawer" />
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>